[package]
name = "so-cold"
version = "0.1.0"
authors = ["sugiura-hiromichi <sugiura130418@icloud.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "*"
chrono = { version = "*", features = ["serde"] }
dioxus = { version = "*", features = [
	"web",
	"router",
	"document",
	"fullstack",
] }
fallible-streaming-iterator = "*"
futures = "*"
num-traits = "*"
reqwest = { version = "*", features = ["json"] }
rusqlite = { version = "*", optional = true }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
