[package]
name = "elseeee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "ipc_ping_pong"
harness = false

[dev-dependencies]
divan = "*"

[dependencies]
anyhow = "*"
chrono = "*"
libc = "*"
mylibrary_ = "*"
pin-project = "*"
pin-utils = "*"
quote = "*"
#rusqlite = "*"
